# uclog

./: .gitignore  CMakeLists.txt  Kconfig  envrc  west.yml
app/: CMakeLists.txt  Kconfig  nrf52840dk_nrf52840.overlay  prj.conf
app/src/: main.c
drivers/: CMakeLists.txt  Kconfig  ucuart.c
drivers/ucuart/: CMakeLists.txt  Kconfig  ucpinctrl.h  ucuart.c
drivers/ucusb/: CMakeLists.txt  Kconfig  ucusb.c
dts/bindings/: unitcircle,ucuart.yaml  unitcircle,ucusb.yaml  vendor-prefixes.txt
include/: cb.h  cbor.h  cobs.h  log.h  ucuart.h
lib/: CMakeLists.txt  Kconfig  apphash.cmake  apphash.ld  cb.c  cbor.c  cobs.c  junk.c  log.c  log.cmake  log.ld  log_backend_uc.c  logserver.c  shell.c  signature.cmake  signature.ld  utf8valid.h
lib/snippets/uclog-shell/: snippet.yml  uclog-shell.conf
lib/snippets/uclog-target0/: snippet.yml  uclog.conf  uclog.overlay
lib/snippets/uclog-target1/: snippet.yml  uclog.conf  uclog.overlay
scripts/: cachelogdata.py  hash.py  logdata.py  sbl.py  sss.py  uccon.py  uclog.py
zephyr/: module.yml
